--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mysql2": "^2.3.3",
     "node-cron": "^3.0.2",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
