--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,19 @@
   "author": "Ginny Tran",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "node-cron": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.11",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
