--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "daisyui": "^2.46.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
+    "daisyui": "^2.46.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
