--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -2,14 +2,16 @@ version: "3.1"
 services:
  db:
   container_name: drones-sql
-  image: mysql
-  command: --default-authentication-plugin=mysql_native_password --default-time-zone='UTC'
+  image: mariadb:10.9
   restart: always
   environment:
-   MYSQL_DATABASE: "drones_db"
-   MYSQL_ROOT_PASSWORD: "example"
+   MARIADB_AUTO_UPGRADE: true
+   MARIADB_RANDOM_ROOT_PASSWORD: true
+   MARIADB_DATABASE: "drones_db"
+   MARIADB_USER: "ginnyvt"
+   MARIADB_PASSWORD: "example"
   ports:
-   - "3306:3306"
+   - 3306:3306
   volumes:
    - ./db:/var/lib/mysql
    - ./db-init.sql:/docker-entrypoint-initdb.d/db-init.sql
