--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,7 @@
-TZ="UTC"
+TZ=UTC
 PORT=your_app_port
-DRONES_DATA_URL="https://assignments.reaktor.com/birdnest/drones"
-PILOT_DATA_URL="https://assignments.reaktor.com/birdnest/pilots"
+DRONES_DATA_URL=https://assignments.reaktor.com/birdnest/drones
+PILOT_DATA_URL=https://assignments.reaktor.com/birdnest/pilots
 NEST_POSITION_X=250000
 NEST_POSITION_Y=250000
 VIOLATED_ZONE=100000
