chore: modify configs for server and client deployment

--- a/client/client-depl.yml
+++ b/client/client-depl.yml
@@ -14,7 +14,7 @@ spec:
   spec:
    containers:
     - name: drones-client
-      image: ginnyvt/drones-client:1.0.2
+      image: ghcr.io/ginnyvt/drones-observer:client
       resources:
        requests:
         memory: "128Mi"
